--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body {
   margin: 20px auto;
   border: 4px solid white;
   overflow: hidden;
-  background: black;
 }
 
 #background {
@@ -24,15 +23,16 @@ body {
   height: 100%;
   background-size: cover;
   background-position: center;
-  transition: background 0.8s ease-in-out;
   image-rendering: pixelated;
+  transition: opacity 0.6s ease-in-out;
+  opacity: 1;
 }
 
 #characters-container img,
 #items-container img {
   position: absolute;
   image-rendering: pixelated;
-  transition: transform 0.3s ease;
+  transition: left 0.8s ease, bottom 0.8s ease, transform 0.3s ease;
 }
 
 #characters-container img:hover,
@@ -84,5 +84,6 @@ body {
   padding: 0;
   margin: 0;
 }
+
 
 
