--- a/style.css
+++ b/style.css
@@ -25,28 +25,20 @@ body {
   transition: background 0.5s ease;
 }
 
-#characters-container, #items-container {
-  position: absolute;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  pointer-events: none;
-}
-
 #hero {
   position: absolute;
-  width: 80px;
-  height: 120px;
-  top: 300px;
-  left: 360px;
+  width: 120px;
+  height: 180px;
+  bottom: 150px;
+  left: 340px;
   z-index: 10;
-  transition: top 0.1s linear, left 0.1s linear;
 }
 
-.character, .item {
+.item {
   position: absolute;
   width: 80px;
-  height: 120px;
-  transition: top 0.1s linear, left 0.1s linear;
+  height: 80px;
+  bottom: 160px; /* near hero */
 }
 
 #textbox {
@@ -57,3 +49,12 @@ body {
   padding: 20px;
   box-sizing: border-box;
 }
+
+#choices button {
+  display: block;
+  margin: 10px auto;
+  padding: 10px;
+  font-family: inherit;
+  cursor: pointer;
+}
+
