--- a/style.css
+++ b/style.css
@@ -17,12 +17,13 @@ body {
 
 #background {
   position: absolute;
-  top: 0; left: 0;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   background-size: cover;
   background-position: center;
-  transition: background-image 0.5s ease, opacity 0.5s ease;
+  transition: opacity 0.5s ease;
   opacity: 1;
 }
 
