--- a/style.css
+++ b/style.css
@@ -17,30 +17,18 @@ body {
 
 #background {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
   background-size: cover;
   background-position: center;
-  transition: opacity 0.5s ease;
-  opacity: 1;
 }
 
-#hero {
+#character {
   position: absolute;
-  width: 120px;
-  height: 180px;
-  bottom: 150px;
-  left: 340px;
-  z-index: 10;
-}
-
-.item {
-  position: absolute;
-  width: 80px;
-  height: 80px;
-  bottom: 160px;
+  bottom: 100px;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 250px;
 }
 
 #textbox {
@@ -59,3 +47,4 @@ body {
   font-family: inherit;
   cursor: pointer;
 }
+
